fix: center-align trigger and helpText for snowflake dropdown #957

--- a/components/datepicker/src/styles/snowflake/style.scss
+++ b/components/datepicker/src/styles/snowflake/style.scss
@@ -39,6 +39,10 @@
     }
   }
 
+  &::part(helpText) {
+    text-align: center;
+  }
+
   // for the trigger content
 
   .dpTriggerContent {
